{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 490,
  "lineage": "37b88988-2956-ecce-2fac-21c685637c84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "liberdale_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64513,
            "arn": "arn:aws:ec2:sa-east-1:975598471165:transit-gateway/tgw-055c4115682138ae5",
            "association_default_route_table_id": "tgw-rtb-0c30afb459120b643",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "liberdale-tgw01: Sao Paulo spoke - compute-only, no PHI",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-055c4115682138ae5",
            "multicast_support": "disable",
            "owner_id": "975598471165",
            "propagation_default_route_table_id": "tgw-rtb-0c30afb459120b643",
            "region": "sa-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "liberdale-tgw01",
              "Region": "sa-east-1",
              "Role": "spoke"
            },
            "tags_all": {
              "Name": "liberdale-tgw01",
              "Region": "sa-east-1",
              "Role": "spoke"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "liberdale_tgw_peering_accept01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-001ca2046d97cf069",
            "peer_account_id": "975598471165",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-0372e6a6b4b4da24b",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdale-tgw-peering-from-tokyo01",
              "Side": "accepter"
            },
            "tags_all": {
              "Name": "liberdale-tgw-peering-from-tokyo01",
              "Side": "accepter"
            },
            "transit_gateway_attachment_id": "tgw-attach-001ca2046d97cf069",
            "transit_gateway_id": "tgw-055c4115682138ae5"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "liberdale_tgw_route_to_tokyo01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.100.0.0/16",
            "id": "tgw-rtb-0c30afb459120b643_10.100.0.0/16",
            "region": "sa-east-1",
            "transit_gateway_attachment_id": "tgw-attach-001ca2046d97cf069",
            "transit_gateway_route_table_id": "tgw-rtb-0c30afb459120b643"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdale_tgw01",
            "aws_ec2_transit_gateway_peering_attachment_accepter.liberdale_tgw_peering_accept01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "liberdale_tgw_vpc_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:sa-east-1:975598471165:transit-gateway-attachment/tgw-attach-0af8e6f057d44f5d1",
            "dns_support": "enable",
            "id": "tgw-attach-0af8e6f057d44f5d1",
            "ipv6_support": "disable",
            "region": "sa-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdale-tgw-vpc-attach01"
            },
            "tags_all": {
              "Name": "liberdale-tgw-vpc-attach01"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-055c4115682138ae5",
            "vpc_id": "vpc-0c90d6182b218c5ae",
            "vpc_owner_id": "975598471165"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdale_tgw01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "liberdale_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2731ec8f9241cba",
            "arn": "arn:aws:ec2:sa-east-1:975598471165:elastic-ip/eipalloc-0f2731ec8f9241cba",
            "association_id": "eipassoc-06ed1fe3a352d8d49",
            "domain": "vpc",
            "id": "eipalloc-0f2731ec8f9241cba",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-020b87176692372e2",
            "private_dns": "ip-10-200-1-96.sa-east-1.compute.internal",
            "private_ip": "10.200.1.96",
            "public_dns": "ec2-56-126-178-149.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.126.178.149",
            "public_ipv4_pool": "amazon",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-nat-eip01"
            },
            "tags_all": {
              "Name": "liberdade-final-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liberdale_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c820c196a818d66a",
            "arn": "arn:aws:ec2:sa-east-1:975598471165:instance/i-0901ec11844eb54cf",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "liberdade-final-instance-profile01",
            "id": "i-0901ec11844eb54cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a59d2bac5d5c34c"
              }
            ],
            "primary_network_interface_id": "eni-06a59d2bac5d5c34c",
            "private_dns": "ip-10-200-101-55.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.101.55",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0880cb96fc5aa9f66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e115d0ec65bff8c",
            "tags": {
              "Name": "liberdade-final-ec201"
            },
            "tags_all": {
              "Name": "liberdade-final-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02464bb4a709848e0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-0901ec11844eb54cf",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.liberdale_instance_profile01",
            "aws_iam_role.liberdale_ec2_role01",
            "aws_security_group.liberdale_ec2_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liberdale_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c820c196a818d66a",
            "arn": "arn:aws:ec2:sa-east-1:975598471165:instance/i-0ac315ff3c8329c61",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "liberdade-final-instance-profile01",
            "id": "i-0ac315ff3c8329c61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f2ca5611ecbe60d5"
              }
            ],
            "primary_network_interface_id": "eni-0f2ca5611ecbe60d5",
            "private_dns": "ip-10-200-101-82.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.101.82",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046681d2d6ffa4e1f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e115d0ec65bff8c",
            "tags": {
              "Name": "liberdade-final-ec201-private"
            },
            "tags_all": {
              "Name": "liberdade-final-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02464bb4a709848e0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-0ac315ff3c8329c61",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.liberdale_instance_profile01",
            "aws_iam_role.liberdale_ec2_role01",
            "aws_security_group.liberdale_ec2_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liberdale_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:internet-gateway/igw-0a657aaa51aef5555",
            "id": "igw-0a657aaa51aef5555",
            "owner_id": "975598471165",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-igw01"
            },
            "tags_all": {
              "Name": "liberdade-final-igw01"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "liberdale_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "liberdade-final-alb-logs-975598471165",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106",
            "arn_suffix": "app/liberdade-final-alb01/bf89071c83f27106",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "liberdade-final-alb01-1823016414.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "liberdade-final-alb01",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-06909998330abe20c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0268dbe9ad85b32b5"
              },
              {
                "subnet_id": "subnet-027b5cf4c8c72c9f1"
              }
            ],
            "subnets": [
              "subnet-0268dbe9ad85b32b5",
              "subnet-027b5cf4c8c72c9f1"
            ],
            "tags": {
              "Name": "liberdade-final-alb01"
            },
            "tags_all": {
              "Name": "liberdade-final-alb01"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106"
          },
          "dependencies": [
            "aws_s3_bucket.liberdale_alb_logs_bucket01",
            "aws_security_group.liberdale_alb_sg01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_caller_identity.liberdale_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "liberdale_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/ce87c3e156930540",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/ce87c3e156930540",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/ce87c3e156930540"
          },
          "dependencies": [
            "aws_lb.liberdale_alb01",
            "aws_lb_target_group.liberdale_tg01",
            "aws_s3_bucket.liberdale_alb_logs_bucket01",
            "aws_security_group.liberdale_alb_sg01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_caller_identity.liberdale_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "liberdale_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352",
            "certificate_arn": "arn:aws:acm:sa-east-1:975598471165:certificate/c77f1842-c9dd-4e3f-aae9-74db9e01ffda",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access Denied - Origin Header Required",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352"
          },
          "dependencies": [
            "aws_acm_certificate.liberdale_acm_cert01",
            "aws_acm_certificate_validation.liberdale_acm_validation01_dns_bonus",
            "aws_lb.liberdale_alb01",
            "aws_route53_record.liberdale_acm_validation_records01",
            "aws_s3_bucket.liberdale_alb_logs_bucket01",
            "aws_security_group.liberdale_alb_sg01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_caller_identity.liberdale_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "liberdale_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/017c5a171fc0a93d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/017c5a171fc0a93d",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352",
            "priority": 99,
            "region": "sa-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/017c5a171fc0a93d"
          },
          "dependencies": [
            "aws_acm_certificate.liberdale_acm_cert01",
            "aws_acm_certificate_validation.liberdale_acm_validation01_dns_bonus",
            "aws_lb.liberdale_alb01",
            "aws_lb_listener.liberdale_https_listener01",
            "aws_route53_record.liberdale_acm_validation_records01",
            "aws_s3_bucket.liberdale_alb_logs_bucket01",
            "aws_security_group.liberdale_alb_sg01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_caller_identity.liberdale_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "liberdale_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/4e741b65f6bb5089",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-liberdale-Growl",
                    "regex_values": [],
                    "values": [
                      "NsKMkwxJFP1YTlDxW5kcNqxRtTgH5Eyr"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/4e741b65f6bb5089",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352",
            "priority": 1,
            "region": "sa-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:listener-rule/app/liberdade-final-alb01/bf89071c83f27106/389c95d2606df352/4e741b65f6bb5089"
          },
          "dependencies": [
            "aws_acm_certificate.liberdale_acm_cert01",
            "aws_acm_certificate_validation.liberdale_acm_validation01_dns_bonus",
            "aws_lb.liberdale_alb01",
            "aws_lb_listener.liberdale_https_listener01",
            "aws_lb_target_group.liberdale_tg01",
            "aws_route53_record.liberdale_acm_validation_records01",
            "aws_s3_bucket.liberdale_alb_logs_bucket01",
            "aws_security_group.liberdale_alb_sg01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_caller_identity.liberdale_self01",
            "random_password.liberdale_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "liberdale_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
            "arn_suffix": "targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:sa-east-1:975598471165:loadbalancer/app/liberdade-final-alb01/bf89071c83f27106"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "liberdade-final-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "liberdade-final-tg01"
            },
            "tags_all": {
              "Name": "liberdade-final-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "liberdale_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be,i-0ac315ff3c8329c61,80",
            "port": 80,
            "region": "sa-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
            "target_id": "i-0ac315ff3c8329c61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "port": 80,
            "region": "sa-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:975598471165:targetgroup/liberdade-final-tg01/842ab70e2bdaf6be",
            "target_id": "i-0ac315ff3c8329c61"
          },
          "dependencies": [
            "aws_iam_instance_profile.liberdale_instance_profile01",
            "aws_iam_role.liberdale_ec2_role01",
            "aws_instance.liberdale_ec201_private_bonus",
            "aws_lb_target_group.liberdale_tg01",
            "aws_security_group.liberdale_ec2_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "liberdale_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2731ec8f9241cba",
            "association_id": "eipassoc-06ed1fe3a352d8d49",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04c691db7002d42a8",
            "network_interface_id": "eni-020b87176692372e2",
            "private_ip": "10.200.1.96",
            "public_ip": "56.126.178.149",
            "region": "sa-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027b5cf4c8c72c9f1",
            "tags": {
              "Name": "liberdade-final-nat01"
            },
            "tags_all": {
              "Name": "liberdade-final-nat01"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.liberdale_nat_eip01",
            "aws_internet_gateway.liberdale_igw01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdale_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012d4a11c675bb7ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04c691db7002d42a8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec"
          },
          "dependencies": [
            "aws_eip.liberdale_nat_eip01",
            "aws_internet_gateway.liberdale_igw01",
            "aws_nat_gateway.liberdale_nat01",
            "aws_route_table.liberdale_private_rt01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdale_private_to_tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.100.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012d4a11c675bb7ec373368074",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-055c4115682138ae5",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "10.100.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.liberdale_tgw01",
            "aws_ec2_transit_gateway_vpc_attachment.liberdale_tgw_vpc_attach01",
            "aws_route_table.liberdale_private_rt01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdale_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a657aaa51aef5555",
            "id": "r-rtb-05044ceee55f367fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-05044ceee55f367fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-05044ceee55f367fe"
          },
          "dependencies": [
            "aws_internet_gateway.liberdale_igw01",
            "aws_route_table.liberdale_public_rt01",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liberdale_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:route-table/rtb-012d4a11c675bb7ec",
            "id": "rtb-012d4a11c675bb7ec",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c691db7002d42a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.100.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-055c4115682138ae5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "liberdade-final-private-rt01"
            },
            "tags_all": {
              "Name": "liberdade-final-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-012d4a11c675bb7ec",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liberdale_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:route-table/rtb-05044ceee55f367fe",
            "id": "rtb-05044ceee55f367fe",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a657aaa51aef5555",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "liberdade-final-public-rt01"
            },
            "tags_all": {
              "Name": "liberdade-final-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-05044ceee55f367fe",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdale_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8f3bc65f9aedcc",
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec",
            "subnet_id": "subnet-05e115d0ec65bff8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdale_private_rt01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308b3c111dcaac7e",
            "region": "sa-east-1",
            "route_table_id": "rtb-012d4a11c675bb7ec",
            "subnet_id": "subnet-04f14d0096537e8bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdale_private_rt01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdale_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0523f663e3f54d165",
            "region": "sa-east-1",
            "route_table_id": "rtb-05044ceee55f367fe",
            "subnet_id": "subnet-027b5cf4c8c72c9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdale_public_rt01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012bc5b75e3f81ecd",
            "region": "sa-east-1",
            "route_table_id": "rtb-05044ceee55f367fe",
            "subnet_id": "subnet-0268dbe9ad85b32b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdale_public_rt01",
            "aws_subnet.liberdale_public_subnets",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberdale_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:security-group/sg-06909998330abe20c",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to target group (usually 80) to private network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06909998330abe20c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-5da64334"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "liberdade-final-alb-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liberdade-final-alb-sg01"
            },
            "tags_all": {
              "Name": "liberdade-final-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-06909998330abe20c",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberdale_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:security-group/sg-02464bb4a709848e0",
            "description": "EC2 app security group - inbound from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (includes TGW path to Tokyo RDS on 3306)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02464bb4a709848e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.184.18.128/32"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06909998330abe20c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "liberdade-final-ec2-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liberdade-final-ec2-sg01"
            },
            "tags_all": {
              "Name": "liberdade-final-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-02464bb4a709848e0",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberdale_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:security-group/sg-004b7baa9dc592ac2",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-004b7baa9dc592ac2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from EC2 SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02464bb4a709848e0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "liberdade-final-vpce-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liberdade-final-vpce-sg01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-004b7baa9dc592ac2",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "liberdale_alb_ingress_cf44301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3747984554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-5da64334"
            ],
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-06909998330abe20c",
            "security_group_rule_id": "sgr-062d85245e8c04b03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.liberdale_alb_sg01",
            "aws_vpc.liberdale_vpc01",
            "data.aws_ec2_managed_prefix_list.liberdale_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "liberdale_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2054250531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-02464bb4a709848e0",
            "security_group_rule_id": "sgr-038a924b34ae143b1",
            "self": false,
            "source_security_group_id": "sg-06909998330abe20c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.liberdale_alb_sg01",
            "aws_security_group.liberdale_ec2_sg01",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "liberdale_vpce_sg01_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from EC2 SG",
            "from_port": 443,
            "id": "sgrule-106400191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-004b7baa9dc592ac2",
            "security_group_rule_id": "sgr-0eace61836e07bd96",
            "self": false,
            "source_security_group_id": "sg-02464bb4a709848e0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.liberdale_ec2_sg01",
            "aws_security_group.liberdale_vpce_sg01",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdale_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:subnet/subnet-05e115d0ec65bff8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.200.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e115d0ec65bff8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-private-subnet01"
            },
            "tags_all": {
              "Name": "liberdade-final-private-subnet01"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-05e115d0ec65bff8c",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:subnet/subnet-04f14d0096537e8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.200.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f14d0096537e8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-private-subnet02"
            },
            "tags_all": {
              "Name": "liberdade-final-private-subnet02"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-04f14d0096537e8bd",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdale_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:subnet/subnet-027b5cf4c8c72c9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b5cf4c8c72c9f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-public-subnet01"
            },
            "tags_all": {
              "Name": "liberdade-final-public-subnet01"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-027b5cf4c8c72c9f1",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:subnet/subnet-0268dbe9ad85b32b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0268dbe9ad85b32b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-public-subnet02"
            },
            "tags_all": {
              "Name": "liberdade-final-public-subnet02"
            },
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0268dbe9ad85b32b5",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liberdale_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc/vpc-0c90d6182b218c5ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-03526113cd7621f35",
            "default_route_table_id": "rtb-060b7dde4bd2cd566",
            "default_security_group_id": "sg-0799d05679776d4f8",
            "dhcp_options_id": "dopt-01e9d85ff45b34980",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c90d6182b218c5ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060b7dde4bd2cd566",
            "owner_id": "975598471165",
            "region": "sa-east-1",
            "tags": {
              "Name": "liberdade-final-vpc01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpc-0c90d6182b218c5ae",
            "region": "sa-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-0d120c028cc0906a1",
            "dns_entry": [
              {
                "dns_name": "vpce-0d120c028cc0906a1-bbenatb0.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0d120c028cc0906a1-bbenatb0-sa-east-1c.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0d120c028cc0906a1-bbenatb0-sa-east-1a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2messages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0103673UGOKGSP947S3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d120c028cc0906a1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0473a5e1334bd060e",
              "eni-0a7579d8c9bbcbe82"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2messages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.184",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.202",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0d120c028cc0906a1",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-072dd935a4748493f",
            "dns_entry": [
              {
                "dns_name": "vpce-072dd935a4748493f-apzldg7n.kms.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-072dd935a4748493f-apzldg7n-sa-east-1c.kms.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-072dd935a4748493f-apzldg7n-sa-east-1a.kms.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "kms.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0302509DIMQW32TF23Y"
              },
              {
                "dns_name": "kms.sa-east-1.api.aws",
                "hosted_zone_id": "Z01032122EI8ME315J3EG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-072dd935a4748493f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c6e4bad1ef8aa96f",
              "eni-0dedd6fa4c9493a88"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.kms",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.213",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.26",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-kms01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-072dd935a4748493f",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-07e503c062bae572a",
            "dns_entry": [
              {
                "dns_name": "vpce-07e503c062bae572a-e3oxg9tp.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-07e503c062bae572a-e3oxg9tp-sa-east-1c.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-07e503c062bae572a-e3oxg9tp-sa-east-1a.logs.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "logs.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02963101N5QZVVLJ9P3S"
              },
              {
                "dns_name": "streaming-logs.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z01034593RT4IVQRPTZWL"
              },
              {
                "dns_name": "logs.sa-east-1.api.aws",
                "hosted_zone_id": "Z06173422P775KHE1CR7M"
              },
              {
                "dns_name": "streaming-logs.sa-east-1.api.aws",
                "hosted_zone_id": "Z03028922WOY35E2YXILI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07e503c062bae572a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07a2c12d20f4111bc",
              "eni-0f20d822a6ec8a52d"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.logs",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.243",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.126",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-logs01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-07e503c062bae572a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-096d763acf4249e26",
            "cidr_blocks": [
              "16.12.2.0/24",
              "3.5.232.0/22",
              "16.12.0.0/23",
              "52.95.163.0/24",
              "52.95.164.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096d763acf4249e26",
            "ip_address_type": "ipv4",
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6aa54003",
            "private_dns_enabled": false,
            "region": "sa-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-012d4a11c675bb7ec"
            ],
            "service_name": "com.amazonaws.sa-east-1.s3",
            "service_region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "liberdade-final-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-096d763acf4249e26",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_route_table.liberdale_private_rt01",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-0d4fdf66ed3e3fa93",
            "dns_entry": [
              {
                "dns_name": "vpce-0d4fdf66ed3e3fa93-cxi7q0cl.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0d4fdf66ed3e3fa93-cxi7q0cl-sa-east-1c.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0d4fdf66ed3e3fa93-cxi7q0cl-sa-east-1a.secretsmanager.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "secretsmanager.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z00761652HV2510D774BX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d4fdf66ed3e3fa93",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b3d703358674919",
              "eni-0dfb303b23a3d385e"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.secretsmanager",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.150",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.223",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-secrets01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0d4fdf66ed3e3fa93",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-0c4b17929aa5d9f13",
            "dns_entry": [
              {
                "dns_name": "vpce-0c4b17929aa5d9f13-op8f55vl.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c4b17929aa5d9f13-op8f55vl-sa-east-1c.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c4b17929aa5d9f13-op8f55vl-sa-east-1a.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssm.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z010437327QM4AVGEUMFM"
              },
              {
                "dns_name": "ssm-facade.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0103254QIU5XB29UKJF"
              },
              {
                "dns_name": "ssm.sa-east-1.api.aws",
                "hosted_zone_id": "Z01043721FZM2XBTIO9CQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c4b17929aa5d9f13",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0468303c49ed35001",
              "eni-049f566542b3ee727"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssm",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.98",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.144",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-ssm01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0c4b17929aa5d9f13",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "liberdale_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:vpc-endpoint/vpce-04f6a5a219d66f735",
            "dns_entry": [
              {
                "dns_name": "vpce-04f6a5a219d66f735-2bl1e3mq.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-04f6a5a219d66f735-2bl1e3mq-sa-east-1a.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-04f6a5a219d66f735-2bl1e3mq-sa-east-1c.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z02962657P6PC94H753X"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.api.aws",
                "hosted_zone_id": "Z01043322NC24JJJWWDBB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04f6a5a219d66f735",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-027cc1f365856cce7",
              "eni-0ac90025a51248154"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-004b7baa9dc592ac2"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssmmessages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.200.101.50",
                "subnet_id": "subnet-05e115d0ec65bff8c"
              },
              {
                "ipv4": "10.200.102.36",
                "subnet_id": "subnet-04f14d0096537e8bd"
              }
            ],
            "subnet_ids": [
              "subnet-04f14d0096537e8bd",
              "subnet-05e115d0ec65bff8c"
            ],
            "tags": {
              "Name": "liberdade-final-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "liberdade-final-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c90d6182b218c5ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-04f6a5a219d66f735",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_vpce_sg01",
            "aws_subnet.liberdale_private_subnets",
            "aws_vpc.liberdale_vpc01",
            "data.aws_region.liberdale_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:975598471165:security-group-rule/sgr-0a10a8cd6ca578de2",
            "cidr_ipv4": "99.184.18.128/32",
            "cidr_ipv6": null,
            "description": "SSH from admin IP",
            "from_port": 22,
            "id": "sgr-0a10a8cd6ca578de2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-02464bb4a709848e0",
            "security_group_rule_id": "sgr-0a10a8cd6ca578de2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sgr-0a10a8cd6ca578de2",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.liberdale_ec2_sg01",
            "aws_vpc.liberdale_vpc01"
          ]
        }
      ]
    }
  ]
}